--- a/PathFinding.html
+++ b/PathFinding.html
@@ -20,7 +20,7 @@
 									GUI</a></h1>
 									<p>A graphical user interface created in pygame to visually demonstrate Djikstra's and Breadth First Search algorithmns.</p>
 								</header>
-								<iframe width="1008" height="494" src="https://www.youtube.com/embed/watch?v=AuVflD-mb_w"1 allowfullscreen></iframe>
+								<div class="image main"><img src="images/Pathfinding.JPG" alt="" /></div>
 								<p>This GUI was created in the first 2 weeks of summer vacation my 2nd year of undergrad. This was right after I took a data structures course and wanted to combine my love for graphics and the new knowledge I learned of pathfinding.</p>
 								<p>The green tiles signify what nodes have been considered for the given shortest path. You can left click to add/remove walls and change the grid. Right click moves the destination node and middle click moves the start node. Click the github link below to go to the project repo.</p>
 								<ul class="icons alt">
